--- a/UI/package.json
+++ b/UI/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Ardu-Stim",
-  "version": "0.0.2",
-  "description": "Ardu-Stim engine simulator",
+  "version": "0.0.3",
+  "description": "Ardu-Stim engine simulator - Speeduino Version",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,7 +9,7 @@
     "install": "electron-rebuild -f",
     "package-mac": "electron-build --mac",
     "package-win": "electron-build --win",
-    "package-linux": "electron-packager . SpeedyLoader --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icons/png/1024x1024.png --prune=true --out=release-builds"
+    "package-linux": "electron-packager . Ardu-Stim --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icons/png/1024x1024.png --prune=true --out=release-builds"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/speeduino/Ardu-Stim",
   "devDependencies": {
     "electron": "^4.1.1",
+    "electron-builder": "^22.7.0",
     "electron-packager": "^13.1.1",
     "electron-rebuild": "^1.8.4"
   },
