--- a/ardustim/platformio.ini
+++ b/ardustim/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[env]
+monitor_speed = 115200 
+
 [env:diecimilaatmega328]
 platform = atmelavr
 board = diecimilaatmega328
@@ -15,3 +18,8 @@ framework = arduino
 
 [platformio]
 src_dir=ardustim
+
+[env:uno]
+platform = atmelavr
+board = uno
+framework = arduino
