--- a/UI/package.json
+++ b/UI/package.json
@@ -33,8 +33,9 @@
     "electron-rebuild": "^2.3.4"
   },
   "dependencies": {
+    "cross-fetch": "^3.1.4",
     "electron-dl": "^1.14.0",
-    "request": "^2.88.0",
+    "semver": "^7.3.5",
     "serialport": "^9.0.4",
     "usb": "^1.6.5"
   },
