--- a/UI/package.json
+++ b/UI/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron .",
+    "start": "electron . --no-sandbox",
     "install": "electron-rebuild -f",
     "package-mac": "electron-builder --mac",
     "package-win": "electron-builder --win",
