Force npm test into UI directory for CI

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -13,7 +13,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: 'UI' # Here the path to the folder where package-lock.json is located.
     strategy:
       matrix:
         node-version: [14.x, 16.x, 18.x]
@@ -26,5 +28,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: '**/package-lock.json'
     - run: npm install electron-rebuild -g
     - run: npm install
