Attempt to upload firmware to new nano bootloader and then retry for old if that fails. Fixes #61

--- a/ardustim/platformio.ini
+++ b/ardustim/platformio.ini
@@ -16,6 +16,11 @@ platform = atmelavr
 board = diecimilaatmega328
 framework = arduino
 
+[env:nano]
+platform = atmelavr
+board = nanoatmega328
+framework = arduino
+
 [platformio]
 src_dir=ardustim
 
