--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Artefact for linux build
-          path: dist/*.AppImage
+          path: UI/dist/*.AppImage
 
   Build-for-mac:
     name: Run npm on x64 macos
@@ -61,7 +61,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Artefact for Mac build
-          path: dist/*.dmg
+          path: UI/dist/*.dmg
 
   Build-for-win:
     name: Run npm on x64 Windows
@@ -85,4 +85,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Artefact for Win build
-          path: dist
+          path: UI/dist/*.exe
