--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,6 +77,7 @@ jobs:
           node-version: '19.x'
       - name: Install Electron and build
         run: |
+          brew install python-setuptools 
           npm install electron-rebuild -g
           npm install electron-builder -g
           npm install
