--- a/UI/package.json
+++ b/UI/package.json
@@ -35,6 +35,7 @@
     "electron-builder": "^24.13.3"
   },
   "dependencies": {
+    "electron-rebuild": "^3.2.9",
     "semver": "^7.3.5",
     "serialport": "^10.0.2",
     "usb": "^2.12.1"
